--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -71,7 +71,7 @@ Analytically, instead of solving the full Multinomial filter jointly, it may be 
 First, one would analytically apply EnKF to each alternative disturbance state, analytically generating independent posteriors for each $X^L_t$.
 Next, one would then apply a Dirlichet-Multinomial model to the problem of updating $\vec{\rho_t}$, treating $X^L_t$ as known rather than jointly estimated. The math for this approach has yet to be fully flushed out, and it remains to be seen how well this approximation works in practice and what information would be lost by solving the model conditionally rather than jointly.
 
-An alternative to analytical approximation is to rely on machine learning approaches to build an emulator (a.k.a. surrogate model) [CITE]. While emulators are often used to approximate process-based models, predicting what the model would have output given a set of inputs, here we want to construct an emulator to that Analysis step, predicting what the Multinomial filter would output (probability of disturbance, ecosystem pool means and variances) as a function of the Forecast model state and the observed data constraints. ** Find citations for papers that have emulated other SDA**. Emulators addresses not only the computational cost of scaling up but also the observation that similar sites are going to make similar predictions (e.g., adjacent LANDSAT pixels), and thus fully gridded models are going to perform highly redundant calculations. Emulators still require running the model and analysis (in this case the Multinomial filter), but rather than evaluating every location the filter is run for a subset of locations stratified by relevant variables (initial conditions, observed data constraints, and posssibly also covariates like climate, soils, etc.). Flexible machine learning approaches are then used to build an emulator that predicts the outcome of full Bayesian model. For places where the full models was not run the emulator is then used to predict the full model, which in essence involves interpolating in environmental space and mapping this back to physical space.
+An alternative to analytical approximation is to rely on machine learning approaches to build an emulator (a.k.a. surrogate model) [CITE]. While emulators are often used to approximate process-based models, predicting what the model would have output given a set of inputs, here we want to construct an emulator to that Analysis step, predicting what the Multinomial filter would output (probability of disturbance, ecosystem pool means and variances) as a function of the Forecast model state and the observed data constraints. Emulators addresses not only the computational cost of scaling up but also the observation that similar sites are going to make similar predictions (e.g., adjacent LANDSAT pixels), and thus fully gridded models are going to perform highly redundant calculations. Emulators still require running the model and analysis (in this case the Multinomial filter), but rather than evaluating every location the filter is run for a subset of locations stratified by relevant variables (initial conditions, observed data constraints, and posssibly also covariates like climate, soils, etc.). Flexible machine learning approaches are then used to build an emulator that predicts the outcome of full Bayesian model. For places where the full models was not run the emulator is then used to predict the full model, which in essence involves interpolating in environmental space and mapping this back to physical space.
 
 ## Future Directions: Algorithm Development
 
