--- a/supplemental.Rmd
+++ b/supplemental.Rmd
@@ -1,8 +1,11 @@
 # Supplemental material
 
 
-```{r calibration,fig.cap="Predicted and observed woody biomass, leaf biomass, and NEE at US-Me2",echo=FALSE}
+```{r calibration, echo=FALSE, fig.asp=1.25, fig.cap="Predicted and observed woody biomass, leaf biomass, and NEE at US-Me2"}
 load("fit.RData")
+
+m = matrix(1:3,nrow=3,byrow = TRUE)
+layout(m)
 
 plot(year,Cw.post,ylab="AGB (kgC/m2)",type='l',lwd=3,
      xlim=c(2002,2012),ylim=range(Cw,na.rm=TRUE))
@@ -21,7 +24,7 @@ legend("bottomright",legend=c("model","data"),pch=c(NA,"+"),lty=c(1,NA),col=1:2)
 ```
 
 
-```{r parameters,echo=FALSE}
+```{r parameters, echo=FALSE}
 param.names = c("LUE","GAMMA","tauS","tauW","Av","sd_NEE","sd_leaf","sd_wood")
 param.desc = c("Light Use Efficiency","Fraction of GPP allocated to autotrophic respiration","Soil C residence time","Wood C residence time","Fraction of NPP allocated to leaves","NEE standard deviation","leaf C standard deviation","wood C standard deviation")
 param.table = cbind(param.names,param.desc,format(mle$par,digits=3,scientific=TRUE))
