--- a/methods.Rmd
+++ b/methods.Rmd
@@ -247,7 +247,12 @@ To assess the performance of the Multinomial assimilation algorithm against real
 
 For each location we next extracted PAR driver data from the Daymet product [CITE] using the daymetr R package [@daymetr]. For each location the carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrum values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results is an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
 
-For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error variance was set to $26.5\: kg^2/m^2$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017). The difference between the predicted and observed biomass at the end of the assimilation was taken as a metric of filter divergence, the situation where the model in a data assimilation algorithm becomes so confident in itself that assimilated observations have little impact on the posterior, which then diverges from observations. To standardize this into a unitless metric, the difference in biomass was divided by half the width of the Analysis 95% CI. Across sites the extent of filter divergence was analyzed as a function of disturbance type and post-disturbance AGB using linear models. Similarly, the ability of the algorithm to detect disturbance, represented as the mean posterior estimate of the disturbance probability, was assessed as a function of disturbance type and post-disturbance AGB using generalized linear models with a logit link and quasibinomial family.
+For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error variance was set to $26.5\: kg^2/m^4$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017).
+One thing we wanted to assess with the Multinomial filter is the extent of filter divergence, the situation where the model in a data assimilation algorithm becomes so confident in itself that assimilated observations have little impact on the posterior, which then diverges from observations.
+As a metric to assess the prevalence of filter divergence, we calculated the difference between the last observed data point and the posterior mean of the corresponding Analysis, and then divided this by half the width of the Analysis 95% confidence interval.
+If the confidence interval is symmetric, then any Analysis mean that falls in the confidence interval will score between -1 and 1, while values outside this range are suggestive of filter divergence.
+
+Across sites the extent of filter divergence was analyzed as a function of disturbance type and post-disturbance AGB using linear models. Similarly, the ability of the algorithm to detect disturbance, represented as the mean posterior estimate of the disturbance probability, was assessed as a function of disturbance type and post-disturbance AGB using generalized linear models with a logit link and quasibinomial family.
 
 Finally, based on preliminary results we performed a series of additional assimilation experiments where we manually altered the observation error, R, or process error, Q, to assess the sensitivity of our results. Table (\@ref(tab:QRexp)) lists the multipliers that were used to adjust R and Q. The skill of these assimilation experiments were assessed the same as the original. In addition, changes in skill and filter divergence across experiments were assessed as a function of R and Q focusing on two response variables: (1) the filter coverage, defined as the proportion of sites where our divergence metric falls between -1 and 1 (i.e., where the difference between the observation and Analysis is less than half the width of the Analysis 95% CI); and (2) the detection threshold, defined as the change in AGB where the probability of detecting a disturbance is 50% as inferred by the GLM of disturbance size versus probability of disturbance.
 
@@ -257,13 +262,6 @@ load("QRexp.RData")
 QRexp = data.frame(experiment=1:6,Qmult=Qmult[Qs],Rmult=Rmult[Rs])
 knitr::kable(QRexp,caption="Data Assimilation experiments")
 ```
-
-  * Score: filter divergence, disturbance detection & skill
-  * Regress vs: pre-disturbance biomass, size of disturbance (abs & rel), type, etc
-  
-Divergence
-
-As a metric to assess the prevalence of filter divergence, we calculated the difference between the last observed data point and the posterior mean of the corresponding Analysis, and then divided this by half the width of the Analysis 95% confidence interval. If the confidence interval is symmetric, then any Analysis mean that falls in the confidence interval will score between -1 and 1, while values outside this range are suggestive of filter divergence.
 
 
     
