--- a/methods.Rmd
+++ b/methods.Rmd
@@ -247,7 +247,7 @@ To assess the performance of the Multinomial assimilation algorithm against real
 
 For each location we next extracted PAR driver data from the Daymet product [CITE] using the daymetr R package [@daymetr]. For each location the carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrum values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results is an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
 
-For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error variance was set to $26.5\: kg^2/m^4$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017).
+For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error was set to a standard deviation of $4.2\: kg/m^2$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017).
 One thing we wanted to assess with the Multinomial filter is the extent of filter divergence, the situation where the model in a data assimilation algorithm becomes so confident in itself that assimilated observations have little impact on the posterior, which then diverges from observations.
 As a metric to assess the prevalence of filter divergence, we calculated the difference between the last observed data point and the posterior mean of the corresponding Analysis, and then divided this by half the width of the Analysis 95% confidence interval.
 If the confidence interval is symmetric, then any Analysis mean that falls in the confidence interval will score between -1 and 1, while values outside this range are suggestive of filter divergence.
